# data-project-template

./: .gitignore  Makefile  README.md  cookiecutter.json  noxfile.py  params.yaml  pyproject.toml
.github/workflows/: test_build.yml
notebooks/: data_import.ipynb
src/data_utils/: __init__.py  main.py
src/package/: __init__.py  main.py
tests/: conftest.py  test_main.py  test_repo_setup.py
{{cookiecutter.directory_name}}/: .gitignore  README.md
{{cookiecutter.directory_name}}/docs/: README.md  deployment_plan.md  exit_report.md  project_plan.md
{{cookiecutter.directory_name}}/src/{{cookiecutter.package_name}}/: __init__.py  main.py
{{cookiecutter.directory_name}}/tests/: test_main.py
{{cookiecutter.repo_name}}/: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.repo_name}}/docs/: data_report.md  deployment_plan.md  exit_report.md  model_report.md  project_plan.md  project_research.md  qa_report.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  main.py
{{cookiecutter.repo_name}}/tests/: test_data.py  test_main.py
{{cookiecutter.repo_name}}/{{cookiecutter.pkg_name}}/: errors.py
{{cookiecutter.repo_name}}/{{cookiecutter.pkg_name}}/data/: __init__.py
