[tool.poetry]
name = "project-boilerplate"
version = "1.0.0"
description = "Cookiecutter template for data projects."
authors = ["mwtmurphy <hi@mwtmurphy.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
cookiecutter = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
