[tool.poetry]
name = "project-boilerplate"
version = "1.0.0"
description = "Cookiecutter template for data projects."
authors = ["mwtmurphy <hi@mwtmurphy.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
cookiecutter = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
