[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "7.3.2"
pytest-cov = "4.1.0"
coverage = {version = "7.2.7", extras = ["toml"]}
click = "8.1.3"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.repo_name }}"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.poetry.scripts]
motorway-drs = "{{ cookiecutter.repo_name }}.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
